# placeguessr

./: .gitignore  Cargo.toml  README.md  config.yaml.example
generate_places/: Cargo.toml
generate_places/src/: main.rs
src/: game_logic.rs  location.rs  location_generator.rs  main.rs
templates/: gameover.html.tera  guess_result.html.tera  index.html.tera  main.html.tera  playgame.html.tera
