[package]
name = "placeguessr"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = [ "tera_templates" ] }
serde = "1.0.117"
serde_derive = "1.0.117"
log = "0.4.11"
env_logger = "0.8.1"
serde_json = "1.0.59"
serde_yaml = "0.8.14"
rand = "0.7.3"
