[package]
name = "generate_places"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2.2"
indicatif = "0.15.0"
simple-process-stats = "0.2.0"
tokio = { version = "0.2.22", features = [ "macros" ] }
log = "0.4.11"
simple_logger = "1.11.0"
rand = "0.7.3"
clap = "2.33.3"
